# peekdock

./: .gitignore  AGENTS.md  CMakeLists.txt  PRD.md  PROJECT_CONTEXT.md  README.md  sdkconfig.defaults
assets/: README.md  p0-asset-manifest.md
assets/lvgl/: browser_working_01.c  browser_working_02.c  claude_completed_01.c  claude_completed_02.c  claude_completed_p2.c  claude_completed_p2_b.c  claude_idle_01.c  claude_idle_02.c  claude_idle_p2.c  claude_idle_p2_b.c  claude_running_01.c  claude_running_02.c  claude_running_p2.c  claude_running_p2_b.c  codex_completed_01.c  codex_completed_02.c  codex_completed_p2.c  codex_completed_p2_b.c  codex_error_01.c  codex_error_02.c  codex_error_p2.c  codex_error_p2_b.c  codex_idle_01.c  codex_idle_02.c  codex_idle_p2.c  codex_idle_p2_b.c  jimeng_idle_p2.c  (+11 more)
demo-results/: claude-draft.html  codex-review.html  jimeng-preview.html
docs/: HARDWARE_PORTING.md  TEAM_HANDOFF.md  ui-preview.html
legacy/: README.md
mac-demo/: desktop-pet-tk.py  package.json  server.mjs
memory-bank/: architecture.md  demo-state-script.md  design-document.md  hackathon-demo-plan.md  implementation-plan.md  p0-demo-contract.md  progress.md  tech-stack.md
protocol/: README.md  demo-events.jsonl  mock-timeline.json
references/: README.md
runtime-bridge/: server.mjs
scripts/: com.peekdock.bridge.plist  convert_lvgl_assets.sh  start-peekdock.sh
src/: CMakeLists.txt  idf_component.yml
src/app/: app_main.cpp
src/protocol/: task_protocol.cpp  task_protocol.h
src/ui/screens/: peekdock_screen.cpp  peekdock_screen.h  peekdock_screen_交互优化版.cpp
(+22 files in other folders)
